# memory-arena

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  STATUS.md  demo-flow.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
cypher/: memory_schema.cypher
docker/: postgres-init.sql
docs/: FAQ.md  case-studies.md  decision-guide.md  demo.tape  demo_summary.py  per-question-comparison.md  quantum-and-compression.md  recapture.sh  vendor-pins.md
memory_arena/: __init__.py  cli.py  exceptions.py  paths.py  settings.py  tokenizer.py
memory_arena/arena/: engine.py
memory_arena/benchmark/: __init__.py  evaluator.py  questions.py  recall_lab.py  recall_metrics.py  runner.py
memory_arena/chatbot/: api.py  router.py  session.py
memory_arena/data/results_snapshot/: longmemeval-s_bm25_seed0.json  longmemeval-s_bm25_seed1.json  longmemeval-s_bm25_seed2.json  longmemeval-s_bm25_summary.json  longmemeval-s_cognee_seed0.json  longmemeval-s_cognee_summary.json  longmemeval-s_full_context_seed0.json  longmemeval-s_full_context_summary.json  longmemeval-s_graphiti_seed0.json  longmemeval-s_graphiti_summary.json  longmemeval-s_hybrid_rrf_seed0.json  longmemeval-s_hybrid_rrf_seed1.json  longmemeval-s_hybrid_rrf_seed2.json  longmemeval-s_hybrid_rrf_summary.json  longmemeval-s_hyde_seed0.json  longmemeval-s_hyde_seed1.json  (+36 more)
memory_arena/graph/: analyzer.py  cypher_generator.py  cypher_templates.py  extractor.py  neo4j_store.py  resolver.py  schema.py
memory_arena/llm/: client.py  openrouter.py  providers.py
memory_arena/models/: __init__.py  api.py  benchmark.py  document.py  graph.py  retrieval.py
memory_arena/sessions/: __init__.py  loaders.py  schema.py
memory_arena/static/: 404.html  index.html  index.txt
memory_arena/strategies/: __init__.py  amem.py  base.py  bm25.py  cognee.py  embeddings.py  full_context.py  graphiti.py  graphiti_falkor.py  hipporag2.py  hybrid_rrf.py  hyde.py  karpathy_llm_wiki.py  langmem.py  mem0.py  mem0g.py  memori.py  naive_vector.py  persona_profile.py  raptor.py  recency_window.py  reflection.py
pypi-placeholders/memarena/: pyproject.toml
pypi-placeholders/memory_arena/: pyproject.toml
pypi-placeholders/memoryarena/: README.md  pyproject.toml
results/: .costs.jsonl  cross_judge_report.json  longmemeval-s_amem_seed0.json  longmemeval-s_amem_seed1.json  longmemeval-s_amem_seed2.json  longmemeval-s_amem_summary.json  longmemeval-s_bm25.json  longmemeval-s_bm25_seed0.json  longmemeval-s_bm25_seed1.json  longmemeval-s_bm25_seed2.json  longmemeval-s_bm25_summary.json  longmemeval-s_cognee_seed0.json  longmemeval-s_cognee_summary.json  longmemeval-s_compression_frontier.json  longmemeval-s_full_context_seed0.json  longmemeval-s_full_context_summary.json  longmemeval-s_graphiti_falkor_seed0.json  longmemeval-s_graphiti_falkor_summary.json  longmemeval-s_graphiti_seed0.json  longmemeval-s_graphiti_summary.json  longmemeval-s_hipporag2_seed0.json  longmemeval-s_hipporag2_seed1.json  longmemeval-s_hipporag2_seed2.json  longmemeval-s_hipporag2_summary.json  longmemeval-s_hybrid_rrf_seed0.json  longmemeval-s_hybrid_rrf_seed1.json  longmemeval-s_hybrid_rrf_seed2.json  longmemeval-s_hybrid_rrf_summary.json  longmemeval-s_hyde_seed0.json  longmemeval-s_hyde_seed1.json  longmemeval-s_hyde_seed2.json  longmemeval-s_hyde_summary.json  longmemeval-s_karpathy_llm_wiki_seed0.json  longmemeval-s_karpathy_llm_wiki_summary.json  longmemeval-s_langmem_seed0.json  longmemeval-s_langmem_seed1.json  longmemeval-s_langmem_seed2.json  longmemeval-s_langmem_summary.json  longmemeval-s_mem0_seed0.json  longmemeval-s_mem0_seed1.json  (+37 more)
results/v0.1.4-archive/: longmemeval-s_bm25.json  longmemeval-s_cognee.json  longmemeval-s_full_context.json  longmemeval-s_graphiti.json  longmemeval-s_hybrid_rrf.json  longmemeval-s_hyde.json  longmemeval-s_karpathy_llm_wiki.json  longmemeval-s_langmem.json  longmemeval-s_mem0.json  longmemeval-s_mem0g.json  longmemeval-s_memori.json  longmemeval-s_naive_vector.json  longmemeval-s_persona_profile.json  longmemeval-s_raptor.json  longmemeval-s_recency_window.json  longmemeval-s_reflection.json
scripts/: _chart_style.py  aggregate_bootstrap.py  aggregate_quantum_summaries.py  build_hero_chart.py  build_pairwise_chart.py  build_per_question_comparison.py  build_quantum_chart.py  build_reasoning_gap_chart.py  build_showcase_chart.py  build_social_preview.py  build_taxonomy_chart.py  capture_screenshots.py  check_user_facing_typography.py  compression_frontier.py  cross_judge.py  dump_results_table.py  post_v017_pipeline.sh  quantum_diagnostics.py  quantum_experiments.py  quantum_headroom.py  record_dashboard_tour.py  render_readme.py  robustness.py  ship.sh
tests/: conftest.py  test_amem.py  test_bootstrap.py  test_chatbot_api.py  test_cli.py  test_cost_cap.py  test_evaluator.py  test_exceptions.py  test_hipporag2.py  test_llm_client.py  test_loaders.py  test_openrouter.py  test_providers.py  test_quantum.py  test_questions_loader.py  test_recall_lab.py  test_recall_metrics.py  test_runner.py  test_runner_timeout.py  test_sessions_schema.py  test_settings.py  test_settings_memory.py  test_smoke_questions_yaml.py  test_strategies.py  test_strategies_extra.py  test_strategies_lifecycle.py  test_strategy_error_surfacing.py  test_tokenizer.py
web/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ClientErrorBoundary.tsx  ErrorBoundary.tsx  InfoTip.tsx  Nav.tsx
web/lib/: api.ts  tools-api.ts
(+33 files in other folders)
